Refs #25684 Copernicus; Fixed cookie policy visibility problem in IE.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/copernicusLand.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/copernicusLand.css
@@ -1123,3 +1123,7 @@ and (resolution: 163dpi) {
 .template-login_form #tabbed-portlet {
     width: 100%;
 }
+
+#viewlet-cookiepolicy {
+    background-color: #f3f3f3;
+}
